chnages in web and biller

--- a/wassets/css/style.css
+++ b/wassets/css/style.css
@@ -6760,3 +6760,7 @@ h3.text-center.about-head-line {
 .address-box p a {
     color: yellow;
 }
+
+#viewPlanmobile .modal-dialog {
+    margin: 10px!important;
+}
